--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ header {
     background-color:palevioletred;
     color:rgb(15, 15, 15);
     padding: 1rem;
-    text-align: center;
+    text-align: left;
 }
 #main {
   background-image: url("https://res.cloudinary.com/greypse/image/upload/v1651772773/two-188_onfefx.svg");
-    align-self: center;
+    align-self: left;
     display: block;
     
     
@@ -39,7 +39,7 @@ header {
     display: -webkit-box;
     display: block;
     display: flex;
-    text-align: center;
+    text-align: left;
     outline : outset;
   }
 img {
@@ -51,3 +51,17 @@ h4 {
   font-family: "Londrina Solid", cursive;
   font-weight: 400;
   line-height: 1.%
+}
+.container {
+  display: flex;
+  justify-content: space-between;
+  /* Add other styling as needed */
+}
+.movie-menu {
+  flex: 1;
+  /* Add styling for the movie menu (right column) */
+}
+.movie-display {
+  flex: 2;
+  /* Add styling for the movie display (left column) */
+}
